2002-04-30  Jason R. Mastaler  <jason@mastaler.com>

	* Defaults.py: Include example settings for optional variables
	here instead of sample.tmdarc.
	
2002-04-30  Jason R. Mastaler  <jasonrm@nightshade.la.mastaler.com>

	* Version.py (PLATFORM): Use distutils.util.get_platform().

2002-04-29  Jason R. Mastaler  <jasonrm@nightshade.la.mastaler.com>

	* Defaults.py (PENDING_DELETE_APPEND, PENDING_RELEASE_APPEND): New
	variables.
	
2002-04-28  Jason R. Mastaler  <jason@mastaler.com>

	* HMAC.py: XOR optimizations.

2002-04-23  Jason R. Mastaler  <jasonrm@nightshade.la.mastaler.com>

	* Defaults.py (TERSE_SUMMARY_HEADERS): New variable.

	* Util.py (make_date): Support LOCALDATE.

	* Defaults.py (LOCALDATE): New variable.

2002-04-22  Jason R. Mastaler  <jasonrm@nightshade.la.mastaler.com>

	* Util.py (make_date): Include our own code until such time as
	we can assume availability of the email package.

2002-04-02  Jason R. Mastaler  <jason@aguirre.la.mastaler.com>

	* Util.py (pickleit): Bugfix. Insure the tempfile directory is the
	same one which we are writing to pickle to.

2002-04-01  Jason R. Mastaler  <jasonrm@nightshade.la.mastaler.com>

	* Version.py (ALL): Fall back to using sys.platform if os.uname()
	isn't available on the host.  Also, use SYSNAME and MACHINE
	instead of PLATFORM and ARCH to match the os.uname() docs.
	PLATFORM is now SYSNAME/MACHINE.

	* Util.py (pickleit): Write to a tmpfile, and then rename to the
	target file.

2002-03-31  Jason R. Mastaler  <jason@aguirre.la.mastaler.com>

	* Version.py (ALL): Separate PLATFORM and ARCH with '/'.

	(PLATFORM, ARCH): Replace any frontslashes with underscores.
		
2002-03-30  Jason R. Mastaler  <jasonrm@nightshade.la.mastaler.com>

	* Defaults.py: Failure notices can now be disabled by setting the
	appropriate BOUNCE_TEXT_* variable to None.

	(CONFIRM_ACCEPT_TEXT_INITIAL,
	CONFIRM_ACCEPT_TEXT_ALREADY_CONFIRMED,
	CONFIRM_ACCEPT_TEXT_ALREADY_RELEASED): New variables.
