@@ -1,3 +1,8 @@
+2002-05-01  Jason R. Mastaler  <jasonrm@nightshade.la.mastaler.com>
+
+	* Defaults.py (TMDARC): Allow ~/.tmda/config as a second default
+	location for the configuration file.
+
 2002-04-30  Jason R. Mastaler  <jason@mastaler.com>
 
 	* Defaults.py: Include example settings for optional variables
